--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,6 @@ out/
 .python_packages/
 
 # Local dev scripts you want to ignore (enable if needed)
-# prod_run.bat
+prod_run.bat
 dev_run.bat
 # .envrc
